tests/NormalTests/paczka1/fuzzy1/42854477.err
Error in line 1: lnDtc8eYaa S289 6,6
Error in line 2: lnDtc8eYaa A9 30,8
Error in line 5: S289 S392 2,2
Error in line 8: S289 A9 27,3
Error in line 15: N8fWs S392 "",1
Error in line 14: S289 S818 272,2
Error in line 19: S289 S392 25,6
Error in line 25: S289 S818 77,7
Error in line 33: UWQfa3li S392 23,2
